checker/tests/nullness/init/Uninit5.java
// :: error: (initialization.fields.uninitialized)
public class Uninit5 {
    String x;
}
